# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h  zookeeperutil.h
